syntax = "proto3";
package warden.warden.v1beta3;

option go_package = "github.com/warden-protocol/wardenprotocol/warden/x/warden/types/v1beta3";

// Space is a collection of users (called owners) that manages a set of Keys.
message Space {
  // Unique ID of the space.
  uint64 id = 1;

  // Address of the creator of the space.
  string creator = 2;

  // List of owners of the space.
  repeated string owners = 3;

  // Version of the space. Every time the Space is updated, this number gets increasead by one.
  uint64 nonce = 4;

  // Optional ID of the Template to be applied to every approve vote on *admin* operation.
  // If not specified, the default Template is used.
  //
  // Admin operations are:
  // - warden.warden.Msg.AddSpaceOwner
  // - warden.warden.Msg.RemoveSpaceOwner
  // - warden.warden.Msg.UpdateSpace
  //
  // The default Template is to allow any operation when at least one of its
  // owner approves it.
  uint64 approve_admin_template_id = 5;

  // Optional ID of the Template to be applied to every reject vote on *admin* operation.
  // If not specified, the default Template is used.
  //
  // Admin operations are:
  // - warden.warden.Msg.AddSpaceOwner
  // - warden.warden.Msg.RemoveSpaceOwner
  // - warden.warden.Msg.UpdateSpace
  //
  // The default Template is to allow any operation when at least one of its
  // owner approves it.
  uint64 reject_admin_template_id = 6;

  // Optional ID of the Template to be applied to every approve vote on *sign* operation.
  // If not specified, the default Template is used.
  //
  // Sign operations are:
  // - warden.warden.Msg.NewKeyRequest
  // - warden.warden.Msg.NewSignRequest
  // - warden.warden.Msg.UpdateKey
  //
  // The default Template is to allow any operation when at least one of its
  // owner approves it.
  uint64 approve_sign_template_id = 7;

  // Optional ID of the Template to be applied to every reject vote on *sign* operation.
  // If not specified, the default Template is used.
  //
  // Sign operations are:
  // - warden.warden.Msg.NewKeyRequest
  // - warden.warden.Msg.NewSignRequest
  // - warden.warden.Msg.UpdateKey
  //
  // The default Template is to allow any operation when at least one of its
  // owner approves it.
  uint64 reject_sign_template_id = 8;
}
